# auto-press-rs

./: .gitignore  Cargo.toml  README.md  draw.py  pyproject.toml
.github/workflows/: build.yaml
demo/: advanced.lua  example.lua  scan_dev.lua  timing.lua  typing.lua
examples/: roco_flower.lua
exmaples/: roco_flower.lua
src/: config.rs  controller.rs  devices.rs  lib.rs  lua_interop.rs  main.rs  rng.rs  utils.rs
src/controller/: lua_interop.rs
src/devices/: vendor.rs
