cargo-features = ["panic-immediate-abort"]

[package]
name = "auto-press-rs"
version = "0.1.0"
edition = "2024"
default-run = "auto-press-rs"

license = "MIT"

[dependencies]
ahash = { version = "0.8.12", default-features = false, features = [
    "no-rng",
    "std",
] }
argh = { version = "0.1.19", default-features = false, features = ["help"] }
fastrand = "2.4.1"
interception = { git = "https://github.com/mokurin000/interception-rs2" }
spdlog-rs = { version = "0.5.3", default-features = false, features = [
    "level-debug",
    "release-level-info",
] }

pci-ids = { version = "0.2.6", optional = true }
usb-ids = { version = "1.2025.2", optional = true }
thiserror = "2.0.18"

[features]
default = ["usb-ids"]

pci-ids = ["dep:pci-ids"]
usb-ids = ["dep:usb-ids"]

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_Registry",
]

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
opt-level = "z"
