cargo-features = ["panic-immediate-abort"]

[package]
name = "auto-press-rs"
version = "0.1.0"
edition = "2024"
default-run = "auto-press-rs"

license = "MIT"

[dependencies]
# Input driver
interception = { git = "https://github.com/mokurin000/interception-rs2" }

# Lua runtime
mlua = { version = "0.11.6", features = ["error-send", "vendored"] }

# Common utils
ahash = { version = "0.8.12", default-features = false, features = [
    "no-rng",
    "std",
] }
argh = { version = "0.1.19", default-features = false, features = ["help"] }
fastrand = "2.4.1"
thiserror = "2.0.18"
num_enum = "0.7.6"
spdlog-rs = { version = "0.5.3", default-features = false, features = [
    "level-debug",
    "release-level-info",
] }

# ID database
pci-ids = { version = "0.2.6", optional = true }
hidapi = { version = "2.6.5", optional = true, default-features = false, features = ["windows-native"] }


[features]
default = ["device-info", "lua55"]

device-info = ["dep:hidapi", "dep:windows"]

lua55 = ["mlua/lua55"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]

luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_Registry",
]
optional = true

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
opt-level = "z"
